# aws.blog1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
.claude/: settings.json
MultiServerMCPClient/: .gitignore  README.md  agentcore_remote_agent.py  deploy_agent.py  hosting_mcp_server_iam_auth.ipynb  invoke_mcp_parallel.py  mcp_client.py  mcp_client_remote.py  requirements.runtime.txt  session_behavior_analysis.md  test_MultiServerMCPClient.py  test_remote_agent.py  tool_proxy.py
blog/: 1.first-part.md  2.part-two.md  3. blog-part1.md  4.blog-par2.md
infra/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
infra/modules/agentcore/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/scripts/: agentcore_runtime.py
src/: .bedrock_agentcore.yaml  Dockerfile  mcp.ipynb  mcp_client_remote.py  mcp_server.py  mcp_test.py  requirements.txt
src/langgraph_agent/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  agent.ipynb  agent.py  requirements.txt  streamable_http_sigv4.py  test_agent.py
src/math_mcp/: server.py
src/mcp_server/: .bedrock_agentcore.yaml  mcp.ipynb  mcp_server.py  mcp_test.py  requirements.txt  tracing_utils.py
src/test/: mcp_concurrent_test.py
src/utils/: sigv4_auth.py
tests/: conftest.py
tests/integration/: test_math_mcp.py
tests/unit/: test_server.py
