[project]
name = "math-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10.0",
    "boto3>=1.40.0",
    "botocore>=1.40.0",
    "httpx>=0.28.0",
    "anyio>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "moto[all]>=5.0.0",
    "bedrock-agentcore-starter-toolkit==0.1.14",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: marks tests as integration tests (require live AWS)"]
